 - Allow line achors in html_basic (Mark Stosberg) (rt 13615).
 - Right justify numerical tabular html output (Sébastien Aperghis-Tramoni).
 - Work around ExtUtils::MakeMaker realclean bug (Florian Ragwitz) (rt 17324).
 - Don't try to delete db if it isn't there.
 - No longer create the temporary .version files (Leon Brocard)
 - Document Module::Build's testcover (Leon Brocard)

Release 0.55 - 22nd September 2005
 - Add -gcov option to cover and make it default when using gcc.
 - Remolve unused File::Find from cpancover.
 - Document how to get XS coverage in gcov2perl.
 - Improvements to SVK annotation (Chia-liang Kao).

Release 0.54 - 13th September 2005
 - Make html_basic prettier.
 - Fix pod coverage percentages.
 - Fix integer <-> pointer conversion warnings (Robin Barker).
 - Add more tests for sort bug fixed in 0.53 (Rob Kinyon).
 - Handle || bless {}, "XXX" (reported by Marcel Grünauer).
 - Add preliminary dor support (unfinished).
 - Test against perl-5.8.7.
 - Add check for Pod::Coverage::CountParents.
 - Fix line number display problem in conditionals in Html_basic.
 - Add eval_sub and eval3 tests.
 - Add buildperl script.
 - Add -report option to cpancover.
 - Update cpancover CSS.
 - Partial solution for structure problems including debugging code.
 - Add outputfile option to Html_basic.

Release 0.53 - 17th April 2005
 - Clean up database directories.
 - Allow require File::Spec->catfile('t', 'common.pl'); (from an example by
   Randy W. Sims).
 - Fix core dump associated with sort subs and add test case supplied by
   Leif Eriksen.
 - Add extra options for coverage criteria.
 - Allow pod coverage options to be specified.
 - Update copyrights.
 - Allow Test::Differences output to be displayed usefully.
 - Test against perl-5.9.3.

Release 0.52 - 13th December 2004
 - Fix thread locking bug (Ruslan Zakirov).
 - Make valgrind happy.
 - Fix gcov2perl (Steve Peters).
 - Restore failure message to CLONE.

Release 0.51 - 29th November 2004